--- a/contactDatatable.html
+++ b/contactDatatable.html
@@ -1,5 +1,14 @@
 <template>
     <lightning-card>
+        <div class="slds-col slds-size_2-of-12 slds-p-left_large">
+                <lightning-combobox 
+                name="progress"
+                label="Rows"
+                value={value}
+                placeholder={pageSize}
+                options={options}
+                onchange={handleChange} ></lightning-combobox>
+        </div>
         <div class="slds-m-around_x-large">
             <lightning-datatable key-field="Id" 
                 data={data}
